--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-reveal": "^1.2.2",
 		"react-router-dom": "^6.2.2",
 		"react-scripts": "5.0.1",
+		"react-toastify": "^9.0.8",
 		"styled-components": "^5.3.5",
 		"styled-system": "^5.1.5",
 		"web-vitals": "^2.1.4"
