--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.8.5",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
 		"react-helmet": "^6.1.0",
 		"react-icons": "^4.4.0",
 		"react-markdown": "^8.0.3",
+		"react-redux": "^8.0.2",
 		"react-reveal": "^1.2.2",
 		"react-router-dom": "^6.2.2",
 		"react-scripts": "5.0.1",
