--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"axios": "^0.27.2",
 		"babel-plugin-styled-components": "^1.12.0",
 		"framer-motion": "^4.1.9",
+		"moment": "^2.29.4",
 		"normalize.css": "^8.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
